[tool.poetry]

name = "kglab"
version = "0.7.0"
description = "a simple abstraction layer in Python for building knowledge graphs"
license = "MIT"

authors = [ "Paco Nathan, Derwen, Inc" ]
repository = "https://github.com/DerwenAI/kglab"
homepage = "https://derwen.ai"
readme = "README.md"
documentation = "https://derwen.ai/docs/kgl/"

keywords = [
    "cugraph",
    "gpu",
    "graph algorithms",
    "inference",
    "interactive visualization",
    "knowledge graph",
    "managing namespaces",
    "morph-kgc",
    "probabilistic soft logic",
    "psl",
    "rdf",
    "rml",
    "statistical relational learning",
    "validation",
]

classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Human Machine Interfaces",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Indexing",
]

exclude = [
    "tests/rdf_tests/*"
]


[build-system]

requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.dependencies]

python = "^3.11"
rdflib = "^7.1.4"
csvwlib = "^0.3.2"
morph-kgc = "^2.8.1"
networkx = "^3.5"
owlrl = "^7.1.4"
jpype1 = "^1.6.0"
pyshacl = "^0.30.1"
chocolate = "^0.0.2"
decorator = "^5.2.1"
pyvis = "^0.3.2"
python-dateutil = "^2.9.0.post0"
icecream = "^2.1.7"
cryptography = "^45.0.6"
pynvml = "^12.0.0"
urlpath = "^1.2.0"
requests = "^2.32.5"
gcsfs = "^2025.7.0"
pyarrow = "^21.0.0"
tqdm = "^4.67.1"
igraph = "^0.11.9"
