[build-system]

requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]

name = "kglab"
version = "0.7.0"
description = "a simple abstraction layer in Python for building knowledge graphs"
license = "MIT"

authors = [ "Paco Nathan, Derwen, Inc" ]
repository = "https://github.com/DerwenAI/kglab"
homepage = "https://derwen.ai"
readme = "README.md"
documentation = "https://derwen.ai/docs/kgl/"

keywords = [
    "cugraph",
    "gpu",
    "graph algorithms",
    "inference",
    "interactive visualization",
    "knowledge graph",
    "managing namespaces",
    "morph-kgc",
    "probabilistic soft logic",
    "psl",
    "rdf",
    "rml",
    "statistical relational learning",
    "validation",
]

classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Human Machine Interfaces",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Indexing",
]

exclude = [
    "tests/rdf_tests/*"
]


[tool.poetry.dependencies]

python = "^3.11"
rdflib = "^7.1.4"
csvwlib = "^0.3.2"
morph-kgc = "^2.8.1"
networkx = "^3.5"
owlrl = "^7.1.4"
jpype1 = "^1.6.0"
pyshacl = "^0.30.1"
chocolate = "^0.0.2"
decorator = "^5.2.1"
pyvis = "^0.3.2"
python-dateutil = "^2.9.0.post0"
icecream = "^2.1.7"
cryptography = "^45.0.6"
pynvml = "^12.0.0"
urlpath = "^1.2.0"
requests = "^2.32.5"
gcsfs = "^2025.7.0"
pyarrow = "^21.0.0"
tqdm = "^4.67.1"
igraph = "^0.11.9"


[tool.poetry.group.dev.dependencies]

pytest = "^8.4.1"
pre-commit = "^4.3.0"
mypy = "^1.17.1"
pylint = "^3.3.8"
bandit = "^1.8.6"
codespell = "^2.4.1"
coverage = "^7.10.4"
xmltodict = "^0.14.2"
selenium = "^4.35.0"
responses = "^0.25.8"
types-python-dateutil = "^2.9.0.20250809"
types-requests = "^2.32.4.20250809"
mkdocs-material = "^9.6.17"
mkdocs-git-revision-date-plugin = "^0.3.2"
pygments = "^2.19.2"
scikit-learn = "^1.7.1"
zarr = "^3.1.1"
