[metadata]
name = kglab
version = 0.6.7
author = Paco Nathan
author_email = paco@derwen.ai
license = MIT
description = A simple abstraction layer in Python for building knowledge graphs
keywords =
    controlled
    vocabulary,
    cugraph,
    deep
    learning,
    embedding,
    gpu,
    graph
    algorithms,
    igraph,
    inference,
    interactive
    visualization,
    json-ld,
    knowledge
    graph,
    managing
    namespaces,
    morph-kgc,
    n3,
    networkx,
    owl,
    pandas,
    parquet,
    probabilistic
    soft
    logic,
    psl,
    pyvis,
    rapids,
    rdf,
    rml,
    roam
    research,
    serialization,
    shacl,
    skos,
    sparql,
    statistical
    relational
    learning,
    topology,
    turtle,
    validation
url = https://derwen.ai/docs/kgl/
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Human Machine Interfaces
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Text Processing :: Indexing
project_urls =
    DOI = https://doi.org/10.5281/zenodo.6360664
    Community Survey = https://forms.gle/FMHgtmxHYWocprMn6
    Discussion Forum = https://www.linkedin.com/groups/6725785/
    DockerHub = https://hub.docker.com/r/derwenai/kglab
    Hands-on Tutorial = https://derwen.ai/docs/kgl/tutorial/
    Issue Tracker = https://github.com/DerwenAI/kglab/issues
    Source Code = https://github.com/DerwenAI/kglab

[options]
packages = find:
zip_safe = False
install_requires =
    greenlet==2.0.1
    setuptools>=65.5.1

    aiohttp>=3.8
    chocolate>=0.0.2
    csvwlib>=0.3.2
    cryptography>=35.0
    decorator>=5.1
    fsspec[gs,s3]>=2022.2
    gcsfs>=2022.2
    icecream>=2.1
    morph-kgc>=2.0.0
    networkx>=2.7
    numpy>=1.23.0
    owlrl>=6.0.2
    oxrdflib>=0.3.1
    pandas>=1.4
    pslpython>=2.2.2
    pyarrow>=7.0
    pynvml>=11.4
    pyshacl>=0.18
    python-dateutil>=2.8
    pyvis>=0.1.9
    rdflib>=6.1
    requests>=2.27
    scikit-learn>=1.3.0
    scipy>=1.8.0
    statsmodels>=0.13
    tqdm>=4.63
    urlpath>=1.2

python_requires = >=3.7

[options.packages.find]
exclude = docs; examples

[options.entry_points]
rdf.plugins.store = kglab = kglab:PropertyStore

[options.extras_require]
base =
    greenlet==2.0.1
    setuptools>=65.5.1

    aiohttp>=3.8
    chocolate>=0.0.2
    csvwlib>=0.3.2
    cryptography>=35.0
    decorator>=5.1
    fsspec[gs,s3]>=2022.2
    gcsfs>=2022.2
    icecream>=2.1
    morph-kgc>=2.0.0
    networkx>=2.7
    numpy>=1.23.0
    owlrl>=6.0.2
    oxrdflib>=0.3.1
    pandas>=1.4
    pslpython>=2.2.2
    pyarrow>=7.0
    pynvml>=11.4
    pyshacl>=0.18
    python-dateutil>=2.8
    pyvis>=0.1.9
    rdflib>=6.1
    requests>=2.27
    scikit-learn>=1.3.0
    scipy>=1.8.0
    statsmodels>=0.13
    tqdm>=4.63
    urlpath>=1.2

docs =
    bandit>=1.7
    codespell>=2.1
    coverage>=6.3
    flask>=2.0
    flit>=3.8
    grayskull>=1.1
    jupyterlab>=3.3
    mistune>=0.8
    mkdocs-git-revision-date-plugin>=0.3
    mkdocs-material>=8.2
    mknotebooks>=0.7
    mypy>=0.940
    nbconvert>=6.4
    nbmake>=1.3
    notebook>=6.4
    pipdeptree>=2.2
    pre-commit>=2.17
    pygments>=2.11
    pylint>=2.12
    pymdown-extensions>=9.2
    pytest>=7.1
    responses>=0.19
    scikit-learn>=1.0
    selenium>=4.1
    setuptools>=65.5.1
    twine>=3.8
    types-python-dateutil>=2.8
    types-requests>=2.27
    wheel>=0.37
    xmltodict>=0.12
tutorial =
    cairocffi>=1.3
    gensim>=3.8
    igraph>=0.9
    jupyterlab>=3.1.4
    leidenalg>=0.8
    matplotlib>=3.3.4
    pylev>=1.3
