

[tool.poetry]
name = "kglab"
version = "0.6.7"
description = "a simple abstraction layer in Python for building knowledge graphs"
license = "MIT"
authors = ["Paco Nathan"]
maintainers = ["kglab contributors"]
repository = "https://github.com/DerwenAI/kglab"
homepage = "https//derwen.ai/docs/kgl/"
readme = "README.md"
documentation = "https://derwen.ai/docs/kgl/"
keywords = [
    "controlled vocabulary",
    "cugraph",
    "deep learning",
    "embedding",
    "gpu",
    "graph algorithms",
    "igraph",
    "inference",
    "interactive visualization",
    "json-ld",
    "knowledge graph",
    "managing namespaces",
    "morph-kgc",
    "n3",
    "networkx",
    "owl",
    "pandas",
    "parquet",
    "probabilistic soft logic",
    "psl",
    "pyvis",
    "rapids",
    "rdf",
    "rml",
    "roam research",
    "serialization",
    "shacl",
    "skos",
    "sparql",
    "statistical relational learning",
    "topology",
    "turtle",
    "validation"
    ]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Human Machine Interfaces",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Indexing"
    ]


[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.1"
chocolate = "^0.0.2"
csvwlib = "^0.3.2"
cryptography = "^38.0.1"
decorator = "^5.1.1"
fsspec = {extras = ["gs", "s3"], version = "^2022.8.2"}
gcsfs = "^2022.8.2"
icecream = "^2.1.3"
morph-kgc = "^2.2.0"
networkx = "^2.8.6"
numpy = "^1.23.3"
owlrl = "^6.0.2"
oxrdflib = "^0.3.2"
pandas = "^1.4.4"
pslpython = "^2.3.0"
pyarrow = "^9.0.0"
pynvml = "^11.4.1"
pyshacl = "^0.20.0"
python-dateutil = "^2.8.2"
pyvis = "^0.2.1"
rdflib = "^6.2.0"
requests = "^2.28.1"
tqdm = "^4.64.1"
urlpath = "^1.2.0"
bandit = "^1.7.4"
codespell = "^2.2.1"
coverage = "^6.4.4"
Flask = "^2.2.2"
grayskull = "^1.8.3"
mistune = "^2.0.4"
mkdocs-git-revision-date-plugin = "^0.3.2"
mkdocs-material = "^8.5.1"
pipdeptree = "^2.3.1"
Pygments = "^2.13.0"
pymdown-extensions = "^9.5"
responses = "^0.21.0"
selenium = "^4.4.3"
twine = "^4.0.1"
types-python-dateutil = "^2.8.19"
types-requests = "^2.28.10"
wheel = "^0.37.1"
xmltodict = "^0.13.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
pre-commit = "^2.20.0"
mypy = "^0.971"
black = "^22.8.0"
flake8 = "^5.0.4"
mypy = "^0.971"
pylint = "^2.15.2"
flake8-pylint = "^0.1.3"
bandit = "^1.7.4"
flake8-bandit = "^4.1.1"
mkdocs-git-revision-date-plugin = "^0.3.2"
mkdocs-material = "^8.5.1"


[tool.poetry.group.tut.dependencies]
cairocffi = "^1.3"
gensim = "^3.8"
igraph = "^0.9"
jupyterlab = "^3.1.4"
leidenalg = "^0.8"
matplotlib = "^3.3.4"
pylev = "^1.3"

tool.poetry.scripts = [
    "Makefile = Makefile:main",
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
